<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Locative</string>
    <string name="title_geofences">Geofences</string>
    <string name="title_settings">Settings</string>
    <string name="title_support">Feedback / Support</string>
    <string name="title_twitter">Twitter</string>
    <string name="title_facebook">Facebook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_edit_geofence">Add Geofence</string>
    <string name="title_activity_add_edit_geofence_existing">Edit Geofence</string>
    <string name="action_save">Save</string>
    <string name="loading">Loading…</string>
    <string name="geocoding_progress_message">Determining Location and saving…</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="ok">Ok</string>
    <string name="note">Note</string>
    <string name="please_wait">"Please wait…"</string>
    <string name="please_login_to_test_request">You haven\'t specified a URL for the global HTTP request, so we\'ll only be sending a Fencelog. You need to signup and login for Fencelogs to work.</string>
    <string name="test_request_sent_message">Your Test-Request has been sent. If you\'ve enabled Notifications you\'ll get a confirmation of success.</string>
    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="unknown_location">Unknown Location</string>
    <string name="custom_location_id">Custom Location ID</string>

    <string name="trigger_on_enter">Trigger on enter</string>
    <string name="trigger_on_exit">Trigger on exit</string>
    <string name="entering">entering</string>
    <string name="exiting">leaving</string>
    <string name="error_http_request">Error when sending HTTP request while %1$s</string>
    <!-- 1. Success / Error, 2. Entering / Exiting, 3. HTTP Status Code -->
    <string name="success_http_request">%1$s for HTTP request (%3$d) after %2$s location.</string>
    <string name="success">Success</string>
    <string name="error">Error</string>

    <string name="error_permission_refused">Location permission is needed to use the app!</string>

    <string name="geofences_empty">You currently don\'t have any Geofences. Click the "+" to add some and get started.</string>
    <string name="geofence_add">Add geofence</string>
    <string name="geofence_add_message">Would you like to add a new Geofence locally or import it from my.locative.io?</string>
    <string name="geofence_locally">Locally</string>
    <string name="geofence_import">Import</string>

    <string name="fencelogs">Fencelogs</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="need_login">To use this functionality you need to be logged in to my.locative.io</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="fencelogs_empty">No Fencelogs available. Set up some Geofences to start logging.</string>
    <string name="notifications">Notifications</string>
    <string name="save_error_title">Save error</string>
    <string name="save_error_invalid_enter_url">Could not save Location. Enter URL is invalid. The URL has to start with \'http\' or \'https\'.</string>
    <string name="save_error_invalid_exit_url">Could not save Location. Exit URL is invalid. The URL has to start with \'http\' or \'https\'.</string>

    <string name="http_settings">HTTP Settings</string>
    <string name="geofence_settings">Geofence Settings</string>
    <string name="no_notifications">You have no notifications.</string>
    <string name="advanced">Advanced</string>
    <string name="trigger_threshold_enabled">Geofencing Trigger Threshold Enabled</string>
    <string name="trigger_threshold_notice_disabled">Geofencing events will be triggered immediately.</string>
    <string name="trigger_threshold_notice">Geofencing events will be triggered if location has been visited for %1$d seconds.</string>

    <string name="entered">entered</string>
    <string name="left">left</string>
    <string name="visited">visited</string>

    <!-- Drawer -->
    <string name="drawer_header_username_placeholder">Click here to log in</string>

    <!-- Trigger Errors -->
    <string name="trigger_error_invalid_url_notification">Webhook could not be sent. Invalid URL.</string>
</resources>
