<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/geofence"
            android:title="@string/title_geofences" />

        <item
            android:id="@+id/fencelogs"
            android:title="@string/fencelogs" />

        <item
            android:id="@+id/notifications"
            android:title="@string/notifications" />

        <item
            android:id="@+id/settings"
            android:title="@string/title_settings" />
        <item
            android:id="@+id/feedback"
            android:title="@string/title_support" />

        <item
            android:id="@+id/twitter"
            android:title="@string/title_twitter" />

        <item
            android:id="@+id/facebook"
            android:title="@string/title_facebook" />

    </group>


</menu>